===========

@version-full@ (@release-date@)
[Bugs fixed]
 - Fixed Spring XML loading issue related to validation in SpringContext class.
 - Fixed bug with the FileClientHelper returning wrong list of variants. Reported by Iestyn 
   Evans.
 - Fixed bug in Tag.equals() implementation. Reported by Stephan Koops.
 - Fixed NPE in the war client of the Servlet extension. Reported by Jason Terhune.

[Enhancements]
 - Lowered the logging level for some Simple IO exceptions.
 - Updated JSON JAR to latest version.
 - Externalize mappings between file extensions and media types in the MetadataService. 
   Reported by Alex Milowsky.
 - Close an open BufferedReader in IdentClient class.
 
1.0.7 (2007-12-22)
[Bugs fixed]
 - Fixed bug in the matching of "*" E-Tags. Patch contributed by Alex Milowski. 
 - Set the JAXP Source's systemID property based on the Representation.identifier 
   property if available (SaxRepresentation and TransformRepresentation).
 - Simple could log an exception if the input entity was already closed when returning
   from the handling, as we are trying to consume unread bytes. Reported by Matt Allen.
 - Allow to delete empty directories. Reported by Paul J. Lucas.
 - Fixed remaining issues in the processing of XSLT include/document/import via the 
   TransformRepresentation. Contributed by Marc Portier.
 - Fixed improper handling of SimpleWeb input stream. Reported and contributed by Quintin May.
 - Added check for potential NPE in ApplicationClientDispatcher. Reported by Joshua Shinavier.
 - Fixed bug in Amazon S3 example from REST book in S3Authorized. Reported by Steve Loughran.
 - Fixed potential nullPointer exception in FileClientHelper.
 - Fixed getResponseStream method in HTTPClient extension which should return null when the 
   underlying response body stream is null. Reported and contributed by John R. Fallows.
 - Fixed casting issue on RouteList. Regression in 1.0.6. Reported by Valdis Rigdon and fixed
   by Kevin Conaway.