@@ -10,6 +10,8 @@ Changes log
    Evans.
  - Fixed bug in Tag.equals() implementation. Reported by Stephan Koops.
  - Fixed NPE in the war client of the Servlet extension. Reported by Jason Terhune.
+ - Caught exception with Simple connector when flushing a closed stream. Now it is logged at
+   a lower priority. Reported by Todd Nguyen. 
 
 [Enhancements]
  - Lowered the logging level for some Simple IO exceptions.
